scenarios/expose-apex-certmanager/expected/service-expose-apex-certmanager-production-api.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        deployah.dev/environment-instance: production
        deployah.dev/project: expose-apex-certmanager
        deployah.dev/source: spec
    labels:
        app.kubernetes.io/instance: expose-apex-certmanager-production
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: api
        deployah.dev/component: api
        deployah.dev/environment: production
        deployah.dev/instance: expose-apex-certmanager-production
        deployah.dev/project: expose-apex-certmanager
        helm.sh/chart: api-0.1.0
    name: expose-apex-certmanager-production-api
    namespace: default
spec:
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: http
    selector:
        app.kubernetes.io/instance: expose-apex-certmanager-production
        app.kubernetes.io/name: api
    sessionAffinity: None
    type: ClusterIP
